# x86-disasm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_against_objdump.py  test_decode.py
x86disasm/: __init__.py  __main__.py  decode.py  reference.py
