[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "x86-disasm"
version = "0.1.0"
description = "An x86-64 disassembler in pure Python. 333,005 instructions decoded byte-identically to GNU objdump."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kai Pfister" }]
keywords = ["x86-64", "disassembler", "machine-code", "objdump", "from-scratch", "reverse-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Disassemblers",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/Wasserpuncher/x86-disasm"

[project.scripts]
x86disasm = "x86disasm.__main__:main"

[tool.setuptools.packages.find]
include = ["x86disasm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
